2004-11-11  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (MAX_IMMED6): Change value to 65.

2004-11-10  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (update_next_frag_state): Always add a NOP if
	relaxing at the end of a loop.  Don't mark frags as UNREACHABLE or
	MAYBE_UNREACHABLE.
	(relax_frag_immed): Update call to update_next_frag_state.

2004-11-10  Alan Modra  <amodra@bigpond.net.au>

	* obj.h (struct format_ops <app_file>): Add int param.
	* read.h (s_app_file_string): Likewise.
	* read.c (s_app_file_string): Likewise.
	(s_app_file): Adjust s_app_file_string call.
	* config/tc-mips.c (s_mips_file): Likewise.
	* config/obj-coff.h (obj_app_file): Add app param.
	* config/obj-ecoff.h (obj_app_file): Likewise.
	* config/obj-multi.h (obj_app_file): Likewise.
	* config/obj-elf.h (elf_file_symbol): Likewise.
	* config/obj-elf.c (elf_file_symbol): Only emit one file symbol
	if called for # preprocessor lines.

2004-11-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR 528
	* symbols.c (resolve_symbol_value): Convert weak symbols only
	for Windows PECOFF.
	(symbol_equated_reloc_p): Don't equate weaks when relocating
	only for Windows PECOFF.

2004-11-08  Tomer Levi  <Tomer.Levi@nsc.com>

	* config/tc-crx.c (print_insn): Check and set insn_addr.
	* config/tc-crx.h (md_frag_check): Define.

2004-11-08  Inderpreet Singh   <inderpreetb@nioda.hcltech.com>
	    Vineet Sharma      <vineets@noida.hcltech.com>

	* configure.in: Add support for new target maxq-coff.
	* configure: Regenerate.
	* NEWS: Mention new support.
	* config/tc-maxq.c: New file.
	* config/tc-maxq.h: New file.
	* config/obj-coff.h: Add support for maxq-coff.

2004-11-08  Aaron W. LaFramboise <aaron98wiridge9@aaronwl.com>

	* symbols.c (any_external_name): Define.
	(resolve_symbol_value): Convert weak symbols.
	(S_SET_EXTERNAL): Support any_external_name.
	(S_SET_NAME): Qualify parameter const.
	(symbol_equated_reloc_p): Equate to weaks when relocating.